fix:code alignment fixes

--- a/blocks/image-cards/image-cards.css
+++ b/blocks/image-cards/image-cards.css
@@ -7,7 +7,6 @@
     justify-content: center;
     grid-template-rows: repeat(2, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    /* padding-bottom: 4rem; */
     gap: 2rem;
     padding-top: 2rem;
 } 
@@ -16,9 +15,9 @@
     display: flex;
     flex-direction: column;
     border-radius: 8px;
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     background: var(--secondary-colors-gradient-light-grey, linear-gradient(119deg, #FFF 0%, #E8E8E8 100%));
-    box-shadow: 0px 16px 32px 0px rgba(112, 144, 176, 0.15), 4px 4px 12px 0px rgba(30, 51, 72, 0.15);
+    box-shadow: 0 16px 32px 0 rgba(112 144 176 15), 4px 4px 12px 0 rgba(30 51 72 15);
 }
 .image-cards-container .image-cards ul li h3{
     font-size: 18px;
